[project]
name = "llmx"
version = "0.1.0"
description = "Enhanced wrapper for simonw/llm with sane defaults, better content handling, and rich output"
authors = [
    {name = "Gilad Barnea", email = "giladbarnea@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llm>=0.22",
    "rich>=13.9.4",
    "typer>=0.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
llm = "llmx.cli:run"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.8"
]

[tool.pytest.ini_options]
addopts = "--color=yes --capture=no"
